# Kursovay_5_DataBases

./: .gitignore  DBManager.py  README.md  db_requests.py  hh_utils.py  main.py  pyproject.toml  queries.sql
